Mon Jun 23 23:03:33 UTC 2014  Phillip LaBanca  <labanca_p@ociweb.com>

        * configure:

          Added support for OS X 10.8 Mountain Lion

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Made relevent changes due to the renaming of DDSFacade to DDSTopic

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSTopic.h:

          Renamed DDSFacade to DDSTopic

        * tests/Utils/DDSFacade.h:

          Removed this file.

Mon Jun 23 21:40:22 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:

          When deleting a data writer, wait until all control messages
          sent during unregistering of instances have been accounted before
          proceeding after unregistering instances.  This avoid a later pure
          virtual function call occurring trying to access a message block
          that has been deleted.

Mon Jun 23 19:09:32 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/MessageTracker.h:
        * dds/DCPS/MessageTracker.cpp:

          Added a simple class to track message count and wait
          until all messages have been accounted for.

Mon Jun 23 16:49:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:

          Fixed passing in listener from stack to method that may end up
          being processed on the transport thread.

Mon Jun 23 16:42:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Added call to domain_participant_factory() to ensure it is created
          when we are doing lazy initialization.

        * tests/Utils/DDSApp.cpp:

          Removed debug statements.
