@@ -1,3 +1,11 @@
+Tue Jun 24 13:08:20 UTC 2014  Byron Harris  <harrisb@ociweb.com>
+
+        * dds/DCPS/MessageTracker.h:
+        * dds/DCPS/MessageTracker.cpp:
+        * tests/DCPS/FooTest3_0/PubDriver.cpp:
+
+	  Fix so test code can get to dropped count of data writer messages.
+
 Mon Jun 23 23:03:33 UTC 2014  Phillip LaBanca  <labanca_p@ociweb.com>
 
         * configure:
